Ingress/basic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arcadia
spec:
  ingressClassName: ingressclass1
  rules:
  - host: www.arcadia-finance.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: main
            port:
              number: 80
      - path: /files
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: app2
            port:
              number: 80
      - path: /app3/
        pathType: Prefix
        backend:
          service:
            name: app3
            port:
              number: 80
